# technopark-C-idz1

./: CMakeLists.txt  README.md  main.c
.github/workflows/: workflowMain.yml
linters/: run.sh
tests/: CMakeLists.txt  tests.cpp
weatherLib/: CMakeLists.txt  interface.h  stdInStdOut.c  weatherDataAPI.c
